<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/startButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:padding="16dp"
    android:text="@string/start"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:backgroundTint="@color/oxford_200"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:paddingRight="16dp"
    android:text="@string/my_user_id"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/startButton" />

  <TextView
    android:id="@+id/myUserIdTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="awesome-horse-123"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="@+id/textView3"
    app:layout_constraintStart_toEndOf="@+id/textView3"
    app:layout_constraintTop_toTopOf="@+id/textView3" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nearby_devices"
    app:layout_constraintBottom_toTopOf="@+id/rvConnectedDevices"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/myUserIdTextView" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvConnectedDevices"
    android:layout_width="331dp"
    android:layout_height="674dp"
    android:layout_marginHorizontal="40dp"
    android:layout_marginTop="50dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/myUserIdTextView"
    tools:listitem="@layout/item_connected_device" />
</androidx.constraintlayout.widget.ConstraintLayout>
