<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/layout_group_chat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/tbChat"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:layout_scrollFlags="scroll|enterAlways"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
      app:title="awesome-horse-100"
      app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
      app:titleTextColor="@android:color/white" />

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvMessages"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    app:layout_constrainedHeight="true"
    app:layout_constraintBottom_toTopOf="@+id/text_gchat_indicator"
    app:layout_constraintTop_toBottomOf="@+id/layout_group_chat" />

  <TextView
    android:id="@+id/text_gchat_indicator"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@id/view"
    app:layout_constraintStart_toStartOf="parent" />

  <View
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#e0e0e0"
    app:layout_constraintBottom_toTopOf="@+id/loChatbox" />

  <RelativeLayout
    android:id="@+id/loChatbox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fabFile"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/send_a_file"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      app:srcCompat="@drawable/ic_attach_file_24"
      android:backgroundTint="@color/oxford_100"
      app:tint="@android:color/white"
      />

    <EditText
      android:id="@+id/etMessage"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_marginStart="16dp"
      android:layout_toStartOf="@+id/btnSend"
      android:layout_toEndOf="@+id/fabFile"
      android:background="@android:color/transparent"
      android:hint="@string/enter_message"
      android:inputType="text"
      android:maxLines="6"
      android:minHeight="48dp"
      tools:ignore="Autofill" />

    <Button
      android:id="@+id/btnSend"
      android:layout_width="78dp"
      android:layout_height="48dp"
      android:layout_alignTop="@+id/fabFile"
      android:layout_alignParentEnd="true"
      android:layout_marginRight="10dp"
      android:layout_marginTop="5dp"
      android:text="@string/send" />

  </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
